src/test/resources/examples/invalid/IncompleteFXInclude.fxml
<?import javafx.scene.layout.VBox?>
<fx:root type="VBox" xmlns:fx="http://javafx.com/fxml">
    <fx:include/>
</fx:root>
